yaml/chessclientDeployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chessclient
  labels:
    app: chessclient
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chessclient
  template:
    metadata:
      labels:
        app: chessclient
    spec:
      containers:
      - name: chessclient
        image: gcr.io/ystemdeployment/chessclient
